@@ -1,5 +1,5 @@
 #' Shortens strings to a given length.
-#' 
+#'
 #' @param x [\code{character}]\cr
 #'   Vector of strings.
 #' @param len [\code{integer(1)}]\cr
@@ -8,20 +8,18 @@
 #' @param tail [\code{character(1)}]\cr
 #'   If the string has to be shortened at least 1 character, the final characters will be \code{tail}.
 #'   Default is \dQuote{...}.
-#' @return [\code{character(1)}]. 
+#' @return [\code{character(1)}].
 #' @export
 #' @examples
 #' print(clipString("abcdef", 10))
 #' print(clipString("abcdef", 5))
-#FIXME what abou NAs.
-# careful: in BJ this functuion was used, the code there had NA->NA!
 clipString = function(x, len, tail="...") {
-  checkArg(x, "character", na.ok=FALSE)
+  checkArg(x, "character", na.ok=TRUE)
   len = convertInteger(len)
   checkArg(tail, "character", len=1L, na.ok=FALSE)
   checkArg(len, "integer", len=1L, na.ok=FALSE, lower=nchar(tail))
   #if (is.na(x))
   #  return(NA_character_)
-  ind = nchar(x) > len
+  ind = !is.na(x) & nchar(x) > len
   replace(x, ind, paste(substr(x[ind], 1L, len - nchar(tail)), tail, sep=""))
 }
