@@ -1,6 +1,7 @@
 BBmisc_1.4.?????:
 - renamed convertDfCols to convertDataFrameCols
 - deprecated listToShortString, use convertToShortString
+- chunk distributes size of chunks in a better way
 - new functions:
 -- makeS3Obj
 -- getMaxIndex, getMinIndex
